--- a/note.html
+++ b/note.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Notepad App</title>
 		<link rel="stylesheet" href="note.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 	</head>
 	<body>
 		<div class="container">
@@ -17,17 +18,31 @@
 						<span id="month"> </span> <span id="date"></span>,
 						<span id="year"></span>
 					</h1>
-					<h4>
-						<span id="incomplete-no">0</span> incomplete,
-						<span id="complete-no">0</span> completed
-					</h4>
-					<div class="line"></div>
+                    <!-- AddButton SVG  -->
+                    <div id="new">
+                        <p class="new-note">New Note</p>
+                        <svg
+                            class="add-btn rotated"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            fill="currentColor"
+                            class="w-6 h-6"
+                            style="width:50px;margin: 0 auto;"
+                        >
+                            <path
+                                fill-rule="evenodd"
+                                d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zM12.75 9a.75.75 0 00-1.5 0v2.25H9a.75.75 0 000 1.5h2.25V15a.75.75 0 001.5 0v-2.25H15a.75.75 0 000-1.5h-2.25V9z"
+                                clip-rule="evenodd"
+                                />
+                            </svg>
+                        </div>
+                        <div class="line1"></div>
 				</div>
 				<!---- Incomplete section  -->
 
 				<div class="incomplete">
 					<div class="task-row">
-						<h3>Task</h3>
+						<h3>Notes</h3>
 						<svg
 							id="delete-btn"
 							xmlns="http://www.w3.org/2000/svg"
@@ -66,58 +81,27 @@
 				<div class="line"></div>
 
 				<div class="complete">
-					<div class="completed-dd">
-						<h3>Accomplished</h3>
-						<!-- <svg
-							id="dropdown-icon"
-							xmlns="http://www.w3.org/2000/svg"
-							viewBox="0 0 20 20"
-							fill="currentColor"
-							class="w-5 h-5"
-						>
-							<path
-								fill-rule="evenodd"
-								d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
-								clip-rule="evenodd"
-							/>
-						</svg> -->
-					</div>
-
 					<div class="cb completedCB cbDropDown" id="completedMenu">
 						<!-- empty  -->
 					</div>
 				</div>
 
+
 				<!-- popup window  -->
 				<div class="addPopUpContainer">
 					<div class="addTaskPopUp reveal">
-						<h3>Add your task</h3>
+                        <input type="text" id="note-title" name="fname" value="Add Title here...">
 						<input
 							type="text"
 							class="newTaskBox"
-							placeholder="E.g. Buy Groceries in Evening"
+							placeholder="“It takes as much energy to wish as it does to plan.”"
 						/>
 						<div class="funcBtn">
 							<button id="cancel">Cancel</button>
-							<button id="add">Add</button>
+							<button id="add">Save</button>
 						</div>
 					</div>
 				</div>
-				<!-- AddButton SVG  -->
-				<svg
-					class="add-btn rotated"
-					xmlns="http://www.w3.org/2000/svg"
-					viewBox="0 0 24 24"
-					fill="currentColor"
-					class="w-6 h-6"
-					style="width:50px;margin: 0 auto;"
-				>
-					<path
-						fill-rule="evenodd"
-						d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zM12.75 9a.75.75 0 00-1.5 0v2.25H9a.75.75 0 000 1.5h2.25V15a.75.75 0 001.5 0v-2.25H15a.75.75 0 000-1.5h-2.25V9z"
-						clip-rule="evenodd"
-					/>
-				</svg>
 			</div>
 		</div>
 		<script src="note.js"></script>
