dark theme added for notepad

--- a/note.html
+++ b/note.html
@@ -26,7 +26,6 @@
                             xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 24 24"
                             fill="currentColor"
-                            class="w-6 h-6"
                             style="width:50px;margin: 0 auto;"
                         >
                             <path
@@ -90,7 +89,7 @@
 				<!-- popup window  -->
 				<div class="addPopUpContainer">
 					<div class="addTaskPopUp reveal">
-                        <input type="text" id="note-title" name="fname" value="Add Title here...">
+						<h3>Add a Note</h3>
 						<input
 							type="text"
 							class="newTaskBox"
