minor changes still not responsive

--- a/note.html
+++ b/note.html
@@ -13,20 +13,21 @@
 			<div class="main">
 				<div class="prop"></div>
 				<div class="header">
-					<h4 id="today">Today</h4>
-					<h1>
-						<span id="month"> </span> <span id="date"></span>,
-						<span id="year"></span>
-					</h1>
+					<div class="first" style="display: flex; flex-direction:column">
+						<h4 id="today">Today</h4>
+						<h1>
+							<span id="month"> </span> <span id="date"></span>,
+							<span id="year"></span>
+						</h1>
+					</div>
                     <!-- AddButton SVG  -->
                     <div id="new">
                         <p class="new-note">New Note</p>
                         <svg
                             class="add-btn rotated"
                             xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 24 24"
+							viewbox="0 0 24 24"
                             fill="currentColor"
-                            style="width:50px;margin: 0 auto;"
                         >
                             <path
                                 fill-rule="evenodd"
@@ -35,8 +36,8 @@
                                 />
                             </svg>
                         </div>
-                        <div class="line1"></div>
-				</div>
+					</div>	
+				<div class="line1"></div>
 				<!---- Incomplete section  -->
 
 				<div class="incomplete">
