logo updated & transition applied

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hosting Landing Page</title>
-    <link rel="stylesheet" href="/style.css">   
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">   
 </head>
 <body>
     <!-- Header Starts -->
@@ -13,8 +14,9 @@
         <!-- Navigation Bar Starts -->
         <nav>
             <!-- LOGO -->
-            <div >
-                <img class="logo" id="home" src="/assets/otes..svg">
+            <div class="logo-div" >
+                <img class="logo" id="home" src="/assets/better N.png">
+                <h1>otes.</h1>
             </div>
             <!-- Navigation items Starts -->
             <div>
@@ -23,7 +25,7 @@
                 <a class="nav-item">About Us</a>
                 <a class="nav-item">Contact Us</a>
             </div>
-            <div>
+            <div class="ham">
                 <a href="/note.html"><button class="register-btn">Create Note</button></a>
                 <i class="fa-solid fa-bars"></i>    
             </div>
@@ -35,13 +37,23 @@
         <!-- slide-1 -->
         <div class="slide-1">
             <div class="section_11">
+                <div class="sticky-notes">
+                    <h5 id="des">Simple Notes Planning Tools</h5>
+                    <img src="/assets/sticky-notes-color-line-icon-isolated-on-white-background-vector - Edited.png" alt="sticky notes">
+                </div>
                 <h2>
                     <span class="create-text">Create.</span> Organise. <br> <span>Share.</span>
                 </h2>
+                <span><img src="/assets/Easy.svg" class="easy" alt=""></span>
                 <p>
                     This site makes the notes making very simple, so that you <br>can go through the notes anytime.
                 </p>
-                <button class="choose-package-btn btn">Get Started</button>
+                <button class="choose-package-btn btn">Try now for free</button>
+                <button class="newBTN">See how it works</button>
+                <div class="check">
+                    <div><i class="fa-solid fa-check"></i></div>
+                    <p>14-day free trial, No credit required, Cancel anytime</p>
+                </div>
             </div>
 
             <div class="section_12">
